test/visibility/private/variables/accessesOther.good
accessesOther.chpl:7: error: Cannot access 'foo', 'foo' is private to 'M1'
